--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   h1{margin:0;font-size:18px}
   .top-row{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
   .controls{display:flex;gap:8px;align-items:center}
-  .container{display:grid;grid-template-columns:1fr 450px;gap:12px}
-  .card{background:var(--card);padding:12px;border-radius:8px;border:1px solid var(--line)}
+  .container{display:grid;grid-template-columns:1fr 360px;gap:12px}
+  .card{width:450px;background:var(--card);padding:12px;border-radius:8px;border:1px solid var(--line)}
   .form{padding:6px}
   .slot{display:flex;gap:8px;align-items:center;margin-bottom:8px}
   label.slot-label{min-width:84px;font-size:14px}
