--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ function updateEffectTable() {
       <table class="effect-table">
         <thead>
           <tr>
-            <th>素材</th>
+            <th>タリスマン</th>
             <th class="uncommon-head">アンコモン</th>
             <th class="rare-head">レア</th>
             <th class="legend-head">レジェンダリー</th>
