--- a/ver.0.1/index.html
+++ b/ver.0.1/index.html
@@ -50,7 +50,7 @@ if(!targetURL){
   setTimeout(()=>location.href="https://github.ojach.com/OJapp/",1400);
 }else{
   setTimeout(()=>location.href=targetURL,5000);
-}
+}setTimeout(()=>{}, 3000); // 何もしない"待機"を追加
 </script>
 </body>
 </html>
